refactor: using records vo instead of `Map`